# mastobotmon

./: CMakeLists.txt  README.md
src/: account.cpp  config.cpp  mastobotmon.cpp  mastobotmon.hpp  mastodon.cpp
